Several changes:
- Upgraded Gradle version (from 5.6.3 to 7.3)
- Upgraded Java version (from 11 to 17)
- Improved code (introduced enhanced switch statement etc.)
- Defined GitHub action for building the project
- Added "Build with Gradle" and CodeFactor badges to README.md